Add Processor Building.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,51 +1,52 @@
-
-
-# This is a skeleton CMakeLists.txt file, auto-generated on
-# Thu Jul 18 08:08:08 CEST 2024.  The developer(s) of this package should delete
-# this comment as well as adding dependent targets, packages,
-# etc. specific to the package. For details on how to write a package,
-# please see
-# https://dune-daq-sw.readthedocs.io/en/latest/packages/daq-cmake/
-
 cmake_minimum_required(VERSION 3.12)
 project(tpgengine VERSION 0.0.0)
+
+set(CMAKE_INSTALL_CMAKEDIR ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}/cmake)
 
 find_package(daq-cmake REQUIRED)
 find_package(fmt REQUIRED)
 
 find_package(nlohmann_json REQUIRED)
-find_package(fddetdataformats REQUIRED)
 find_package(trgdataformats REQUIRED)
-
-daq_setup_environment()
-
 
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
 ##############################################################################
 
+set(FDREADOUTLIBS_USE_INTRINSICS ON)
 
-# See https://dune-daq-sw.readthedocs.io/en/latest/packages/daq-cmake/#daq_add_library
-
-daq_add_library( LINK_LIBRARIES ) # Any source files and/or dependent libraries to link in not yet determined
-
-##############################################################################
-
-
-# See https://dune-daq-sw.readthedocs.io/en/latest/packages/daq-cmake/#daq_add_python_bindings
-
-
-daq_add_python_bindings(*.cpp LINK_LIBRARIES ${PROJECT_NAME} ) # Any additional libraries to link in beyond the main library not yet determined
-
+if(${FDREADOUTLIBS_USE_INTRINSICS})
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2")
+endif()
 
 ##############################################################################
 
+add_library(tpgengine SHARED
+	src/AVXAbsRunSumProcessor.cpp
+	src/AVXFrugalPedestalSubtractProcessor.cpp
+	src/AVXRunSumProcessor.cpp
+	src/AVXThresholdProcessor.cpp
+	src/NaiveAbsRunSumProcessor.cpp
+	src/NaiveFrugalPedestalSubstractProcessor.cpp
+	src/NaiveRunSumProcessor.cpp
+	src/NaiveThresholdProcessor.cpp
+	)
+target_include_directories(tpgengine PUBLIC
+	$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+	$<BUILD_INTERFACE:${PROJECTSOURCE_DIR}/src>
+	$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+	)
+target_link_libraries(tpgengine PRIVATE nlohmann_json::nlohmann_json trgdataformats::trgdataformats fmt::fmt)
+install(TARGETS tpgengine EXPORT tpgengineTargets)
 
-# See https://dune-daq-sw.readthedocs.io/en/latest/packages/daq-cmake/#daq_add_unit_test
+CONFIGURE_PACKAGE_CONFIG_FILE(cmake/tpgengineConfig.cmake.in
+	${CMAKE_CURRENT_BINARY_DIR}/tpgengineConfig.cmake
+	INSTALL_DESTINATION ${CMAKE_INSTALL_CMAKEDIR}
+	)
 
-daq_add_unit_test(Placeholder_test LINK_LIBRARIES)  # Placeholder_test should be replaced with real unit tests
+add_subdirectory(unittest)
 
-##############################################################################
-
-daq_install()
-
+install(EXPORT tpgengineTargets DESTINATION ${CMAKE_INSTALL_CMAKEDIR} NAMESPACE tpgengine::)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/tpgengineConfig.cmake
+	DESTINATION ${CMAKE_INSTALL_CMAKEDIR})
+install(DIRECTORY include/${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} FILES_MATCHING PATTERN "*.h??")
