Add TPGenerator AVX Classes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.12)
 project(tpgengine VERSION 0.0.0)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+add_compile_options(-O2)
+
 set(CMAKE_INSTALL_CMAKEDIR ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}/cmake)
 
 find_package(daq-cmake REQUIRED)
@@ -30,6 +35,7 @@ add_library(tpgengine SHARED
 	src/NaiveFrugalPedestalSubstractProcessor.cpp
 	src/NaiveRunSumProcessor.cpp
 	src/NaiveThresholdProcessor.cpp
+	src/AVXGenerator.cpp
 	)
 target_include_directories(tpgengine PUBLIC
 	$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
