--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -7,3 +7,8 @@ add_executable(test_avx_factory avx_factory.cxx)
 target_link_libraries(test_avx_factory PRIVATE tpgengine fmt::fmt)
 target_include_directories(test_avx_factory PRIVATE ${BOOST_INCLUDE_DIRS})
 add_test(NAME avx_factory COMMAND test_avx_factory)
+
+add_executable(test_avx_generator avx_generator.cxx)
+target_link_libraries(test_avx_generator PRIVATE tpgengine fmt::fmt trgdataformats::trgdataformats)
+target_include_directories(test_avx_generator PRIVATE ${BOOST_INCLUDE_DIRS})
+add_test(NAME avx_generator COMMAND test_avx_generator)
