--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -8,7 +8,7 @@ target_link_libraries(test_avx_factory PRIVATE tpgengine fmt::fmt)
 target_include_directories(test_avx_factory PRIVATE ${BOOST_INCLUDE_DIRS})
 add_test(NAME avx_factory COMMAND test_avx_factory)
 
-add_executable(test_avx_generator avx_generator.cxx)
-target_link_libraries(test_avx_generator PRIVATE tpgengine fmt::fmt trgdataformats::trgdataformats)
-target_include_directories(test_avx_generator PRIVATE ${BOOST_INCLUDE_DIRS})
-add_test(NAME avx_generator COMMAND test_avx_generator)
+add_executable(test_avx_pipeline avx_pipeline.cxx)
+target_link_libraries(test_avx_pipeline PRIVATE tpgengine fmt::fmt trgdataformats::trgdataformats)
+target_include_directories(test_avx_pipeline PRIVATE ${BOOST_INCLUDE_DIRS})
+add_test(NAME avx_pipeline COMMAND test_avx_pipeline)
